# Streamlit

./: Ovr2.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  requirements.txt
